
+ ImageExtensions class:
  + ConvertPixelFormat methods: supporting CMYK pixel format for source images.
  + ToIcon methods: supporting CMYK pixel format for source images.
+ PixelFormatExtensions class:
  + The IsIndexed method has been made public
  + New ToKnownPixelFormat(PixelFormat) and ToPixelFormat(KnownPixelFormat) methods

! KGySoft.Drawing.Imaging namespace
===================================
! Most public APIs have been moved into the KGySoft.Drawing.Core package (with unchanged namespace). See the actual
  API changes here: https://github.com/koszeggy/KGySoft.Drawing/blob/master/KGySoft.Drawing.Core/changelog.txt
+ New ReadableBitmapDataExtensions class: contains the ToBitmap/BeginToBitmap/EndToBitmap/ToBitmapAsync methods of
  the original BitmapDataExtensions class that is now in the KGySoft.Drawing.Core package.
  + New ToBitmap/BeginToBitmap/ToBitmapAsync overloads with custom pixel format, quantizer and ditherer.


~~~~~~~~~
* v6.3.2:
~~~~~~~~~

* Assembly changes:
===================
* Upgrading KGySoft.CoreLibraries to version 6.0.2. This may also fix some possible issues if your project uses
  partially trusted domains (.NET Framework 4.x), or when you target the x86 platform (.NET Core 3.0 and above).

+ KGySoft.Drawing.Imaging namespace
===================================
+ The ColorExtensions class is now public. Available extension methods: Blend, TolerantEquals and GetBrightness.


~~~~~~~~~
* v6.3.1:
~~~~~~~~~

* KGySoft.Drawing.Imaging namespace
===================================
* AnimatedGifConfiguration class:
  + New AllowClippedFrames property
  * The EncodeTransparentBorders property has been made obsolete in favor of the new AllowClippedFrames property.
* GifEncoder.EncodeAnimation method:
  + AnimatedGifConfiguration.AllowDeltaFrames is now supported also for quantizers without transparency.
  - If quantizer was not explicitly set, AnimatedGifConfiguration.AllowDeltaFrames was ignored.