@@ -34,6 +34,7 @@
 + PixelFormatExtensions class:
   + The IsIndexed method has been made public
   + New ToKnownPixelFormat(PixelFormat) and ToPixelFormat(KnownPixelFormat) methods
+  + New GetInfo method
 
 ! KGySoft.Drawing.Imaging namespace
 ===================================
